--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arpaap.hosan_notice">
    <application
-        android:label="hosan_notice"
+        android:label="호산고 알리미"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
