--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_sign_in: ^5.1.0
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
+  package_info: ^2.0.2
+  url_launcher: ^6.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
