--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,7 @@
           <string>https</string>
           <string>http</string>
         </array>
+        <key>io.flutter.embedded_views_preview</key>
+        <string>YES</string>
 	</dict>
 </plist>
