--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   firebase_auth: ^3.1.1
   package_info: ^2.0.2
   url_launcher: ^6.0.11
+  firebase_analytics: ^5.0.2
+  cloud_firestore: ^2.5.3
+  webview_flutter: ^2.0.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
