--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   cloud_firestore: ^2.5.3
   webview_flutter: ^2.0.14
+  double_back_to_close: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
