--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   google_sign_in: ^5.1.0
   firebase_core: ^1.6.0
@@ -33,6 +35,8 @@ dependencies:
   cloud_firestore: ^2.5.3
   webview_flutter: ^2.0.14
   double_back_to_close: ^2.0.0
+  intl: ^0.17.0
+  table_calendar: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
