--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,17 @@ dependencies:
   google_sign_in: ^5.1.0
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
+  firebase_analytics: ^5.0.2
+  firebase_remote_config: ^0.11.0+1
+  flutter_local_notifications: ^9.0.0
   package_info: ^2.0.2
   url_launcher: ^6.0.11
-  firebase_analytics: ^5.0.2
   cloud_firestore: ^2.5.3
   webview_flutter: ^2.0.14
   double_back_to_close: ^2.0.0
   intl: ^0.17.0
   table_calendar: ^3.0.2
-  flutter_dotenv: ^5.0.2
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,7 +64,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
