--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   table_calendar: ^3.0.2
   http: ^0.13.4
   android_intent_plus: ^3.0.1
+  permission_handler: ^8.2.5
+  workmanager: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
