Add/Mod: 앱 표시이름 변경, 위치 기록 추가, 교내 내비게이션 완성, 교사용 학생 모니터링 기능 추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
     <application
-        android:label="호산고 알리미"
+        android:label="호산고 앱비"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
