--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+4
+version: 1.0.2+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -45,6 +45,8 @@ dependencies:
   workmanager: ^0.4.1
   flutter_foreground_task: ^3.2.0
   device_info_plus: ^3.2.1
+  localstorage: ^4.0.0+1
+  http_retry: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
