--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_foreground_task: ^3.2.0
   device_info_plus: ^3.2.1
   localstorage: ^4.0.0+1
-  http_retry: ^0.2.0
+  fluttertoast: ^8.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
