--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.11+14
+version: 1.1.0+15
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -48,6 +48,7 @@ dependencies:
   device_info_plus: ^3.2.1
   localstorage: ^4.0.0+1
   fluttertoast: ^8.0.8
+  firebase_messaging: ^11.2.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
