--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   intl: ^0.17.0
   table_calendar: ^3.0.2
   http: ^0.13.4
-  android_intent_plus: ^3.0.1
+  android_intent_plus: ^3.1.1
   permission_handler: ^8.2.5
   workmanager: ^0.4.1
   flutter_foreground_task: ^3.2.0
@@ -50,6 +50,7 @@ dependencies:
   fluttertoast: ^8.0.8
   firebase_messaging: ^11.2.6
   quiver: ^3.0.1+1
+  home_widget: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,7 +59,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^1.2.3
+  flutter_native_splash: ^2.0.5
   pigeon: ^1.0.7
 
 # For information on the generic Dart part of this file, see the
