--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".WidgetProvider" android:exported="true">
+        <receiver android:name=".WidgetProvider" android:label="오늘 시간표" android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
