Add: 시간표 위젯 추가, 토큰 리프레시 오류 수정

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,13 +51,23 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".WidgetProvider" android:label="오늘 시간표" android:exported="true">
+        <receiver android:name=".TimetableWidgetProvider" android:label="오늘 시간표" android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
+
+        <receiver android:name="es.antonborri.home_widget.HomeWidgetBackgroundReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="es.antonborri.home_widget.action.BACKGROUND" />
+            </intent-filter>
+        </receiver>
+        
+        <service android:name="es.antonborri.home_widget.HomeWidgetBackgroundService"
+            android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
 
         <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
         <!-- Don't delete the meta-data below.
