Add/Fix: Android 12 대응, 과제 좋아요, 삭제, 수정 추가

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     implementation fileTree(dir: '../libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
