--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   fluttertoast: ^8.0.8
   firebase_messaging: ^11.2.6
   home_widget: ^0.1.5
+  flutter_blue: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
