Add: Update to Flutter 3.0

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -96,5 +96,7 @@
     <string>Need Location permission</string>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Need Location permission</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 </dict>
 </plist>
