--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="호산고 알리미">
+        android:label="호산고 알리미"
+        android:largeHeap="true">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
@@ -50,23 +51,30 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".TimetableWidgetProvider" android:label="오늘 시간표" android:exported="true">
+        <receiver
+            android:name=".TimetableWidgetProvider"
+            android:exported="true"
+            android:label="오늘 시간표">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
+            <meta-data
+                android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
 
-        <receiver android:name="es.antonborri.home_widget.HomeWidgetBackgroundReceiver"
+        <receiver
+            android:name="es.antonborri.home_widget.HomeWidgetBackgroundReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="es.antonborri.home_widget.action.BACKGROUND" />
             </intent-filter>
         </receiver>
-        
-        <service android:name="es.antonborri.home_widget.HomeWidgetBackgroundService"
-            android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
+
+        <service
+            android:name="es.antonborri.home_widget.HomeWidgetBackgroundService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
         <!-- Don't delete the meta-data below.
