--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -98,5 +98,12 @@
     <string>Need Location permission</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string></string>
+    <key>NSCameraUsageDescription</key>
+    <string></string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string></string>
 </dict>
 </plist>
